# kvnorcom

./: .cproject  .gitignore  .project  Makefile.am  changelog  configure.ac  container-build.sh  create_msys_links.sh  grep_sorted.sh  version.sh
.devcontainer/: devcontainer.json
debian_files/: changelog  control  kvbufrd.dirs  kvbufrd.postinst  norcom2kv.cron.d  norcom2kv.dirs  norcom2kv.postinst  norcom2kv.postrm  rules
docker/: entrypoint.sh  norcom2kv.dockerfile
docker/bionic/: devcontainer.dockerfile  norcom2kv.dockerfile
docker/focal/: devcontainer.dockerfile  norcom2kv.dockerfile
docker/noble/: devcontainer.dockerfile  norcom2kv.dockerfile
m4/: README  libkvcpp.m4
norcom2kv/: changelog  configure.ac  control  kvbufrd.cron.d  kvbufrd.install  kvbufrd.postrm
src/: App.cc  App.h  CollectSynop.cc  CollectWmoReports.cc  CollectWmoReports.h  CorbaThread.cc  FInfo.h  InitLogger.cc  InitLogger.h  Makefile.am  WMORaport.cc  WMORaport.h  decodeArgv0.cc  decodeArgv0.h  kvDataSrcList.h  norcom2kv.cc  testWMORaport.cc
